# pymmw

./: .gitignore  hex.txt  pyproject.toml
source/: pymmw.py
source/app/: plot_detected_objects.py  plot_range_profile.py
source/lib/: shell.py
source/mss/: x8_mmw-xWR68xx.cfg  x8_mmw.py
