[tool.poetry]
name = "pymmw"
version = "0.1.0"
description = "HowTos and Best Practice for software development"
authors = ["Martin Heubuch <martin.heubuch@escad.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.5.0"
scipy = "^1.7.3"
pyserial = "^3.5"
pyusb = "^1.2.1"
pyftdi = "^0.55.0"
tiflash = "^1.3.0"



[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
